2007-08-08  Marek Safar  <marek.safar@gmail.com>

	* expression.cs (ArrayCreation.CloneTo): Allocate exact size.
	
2007-08-07  Miguel de Icaza  <miguel@novell.com>

	* expression.cs: Fix the previous commit, the creation of the
	arguments array list needs also to be conditional on the arguments
	not being null.

	* class.cs: Add a little bit of help to help narrow down problems.

	* expression.cs (ArrayCreation.CloneTo): Argument can be null, do
	not try to copy in that case. 

	* driver.cs: When building SMCS, include a new different set of
	default assemblies here.   Do this here so we can control whether
	to include the default assemblies with /noconfig.

2007-08-03  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #81979
	* expression.cs (TypeOf.GetAttributableValue): Check for type arguments
	only.

2007-08-03  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #82300

	* anonymous.cs (AnonymousContainer.Define): Don't define anything when
	we are in probing scope.

2007-08-03  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #82301

	* statement.cs (Catch.CloneTo): Clone blocks in the right order.
	(Statement.CloneTo): Clone and not map children blocks.

2007-08-03  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #82299

	* expression.cs (LocalVariableReference.CloneTo): Remap local info
	variable too.
	
	* statement.cs (Statement.CloneTo): Clone variables before statements
	to allow remaping of local variables.

2007-08-03  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #82296

	* anonymous.cs,
	* report.cs: Log crash details for future clone problems.
	
	* statement.cs (Return.Clone): Don't clone non-existent expression.

2007-08-03  Raja R Harinath  <harinath@gmail.com>

	* class.cs (TypeContainer.AddBasesForPart): Make virtual.
	(Class.AddBasesForPart): Move CS0537 check here from ...
	* cs-parser.jay (class_declaration): ... here.  Move calling of
	'AddBasesForPart' to ...
	(class_bases): ... here.